Added angular to express

--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -119,6 +119,6 @@ Feb 15 2019 -->
       </div>
     </nav>
     
-    <div class="container-fluid">
+    /*<div class="container-fluid">
       <div class="jumbotron">
-        <h1 class="display-4">Welcome to <%= title%></h1>
+        <h1 class="display-4">Welcome to <%= title%></h1>*/
