--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">
+  <a class="navbar-brand" routerLink="/">
   <span style="font-size: 10px; color: Tomato;">
 <i class="fa fa-registered fa-7x"></i>
 </span>
@@ -27,7 +27,7 @@
       <li class="nav-item">
 
 
-        <a class="nav-link" href="/"
+        <a class="nav-link" routerLink="/"
           > <i class="fa fa-home"></i>  Home Page</a>
 
       </li>
@@ -40,7 +40,7 @@
       <li class="nav-item">
 
 
-        <a class="nav-link" href="/about"
+        <a class="nav-link" routerLink="/about"
           ><i class="fa fa-registered"></i>  About Me</a>
 
       </li>
@@ -53,7 +53,7 @@
       <li class="nav-item">
 
 
-        <a class="nav-link" href="/products"
+        <a class="nav-link" routerLink="/products"
           ><i class="fa fa-tasks"></i>  Projects Page</a>
 
       </li>
@@ -66,7 +66,7 @@
       <li class="nav-item">
 
 
-        <a class="nav-link" href="/services"
+        <a class="nav-link" routerLink="/services"
           ><i class="fa fa-taxi"></i>  Services Page</a>
 
       </li>
@@ -78,23 +78,22 @@
 
       <li class="nav-item">
 
-        <a class="nav-link" href="/contact"
+        <a class="nav-link" routerLink="/contact"
           ><i class="fa fa-phone-square"></i>  Contact Me</a>
 
       </li>
       <!--<% if(typeof displayName == 'string' && displayName) { %>
         <li class="navbar-text"><i class="fas fa-lg fa-user"></i>
-          Welcome, <%= displayName %></li>
-        <li class="nav-item"><a href="/logout" class="nav-link">
+          Welcome, <%= displayName %></li>-->
+        <li class="nav-item"><a routerLink="/logout" class="nav-link">
           <i class="fas fa-lg fa-sign-out-alt"></i> Logout</a></li>
-      <% } else { %>
-        <li class="nav-item"><a href="/login" class="nav-link">
+
+        <li class="nav-item"><a routerLink="/login" class="nav-link">
           <i class="fas fa-lg fa-sign-in-alt"></i> Login</a></li>
-      <% } %>-->
+
     </ul>
   </div>
 </nav>
 
-<div class="container-fluid">
-  <div class="jumbotron">
+
 
