--- a/client/src/app/pages/contact-me/contact-me.component.html
+++ b/client/src/app/pages/contact-me/contact-me.component.html
@@ -1,1 +1,72 @@
 <app-base-page></app-base-page>
+<div class="container-fluid">
+    <div class="jumbotron">
+<div class="col col-md-6" >
+
+
+    <p class="lead"></p>
+        <h5>Rajandeep Kaur Dhaliwal <br/>
+
+Software Engineering Technology <br/>
+
+Centennial College <br/>
+
+rajandhaliwal80@gmail.com <br/></h5>
+
+
+          <a class="btn btn-primary" routerLink="/contact/contact-list" role="button">Contact List</a>
+
+
+
+        <hr class="my-4" />
+<!--feedback form-->
+<form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputFirstName">First Name</label>
+    <input type="text" class="form-control" id="exampleInput" placeholder="First Name">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputLastName">Last Name</label>
+    <input type="text" class="form-control" id="exampleInput" placeholder="Last Name">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputLastName">Last Name</label>
+    <input type="text" class="form-control bfh-phone" data-format="+1 (ddd) ddd-dddd" placeholder="Phone Number">
+  </div>
+  <div class="form-group">
+    <label for="exampleFormControlTextarea1">Message</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
+  </div>
+  <a class="btn btn-primary btn-lg" routerLink="/" role="button"
+            >Submit</a>
+</form>
+          <hr class="my-4" />
+        <p class="lead">
+          <a class="btn btn-primary btn-lg" routerLink="/about" role="button"
+            >About Me</a
+          >&nbsp;&nbsp;
+
+          <a class="btn btn-primary btn-lg" routerLink="/products" role="button"
+            >Projects</a
+          >&nbsp;&nbsp;
+
+          <a class="btn btn-primary btn-lg" routerLink="/" role="button"
+            >Home</a
+          >&nbsp;&nbsp;
+
+          <a class="btn btn-primary btn-lg" routerLink="/contact" role="button"
+            >Contact</a
+          >&nbsp;&nbsp;
+
+
+
+        </p>
+
+      </div>
+    </div>
+  </div>
