--- a/client/src/app/partials/base-page/base-page.component.html
+++ b/client/src/app/partials/base-page/base-page.component.html
@@ -1,5 +1,5 @@
-<div class="container">
+<div class="container-fluid">
   <div class="jumbotron">
-    <h1 class="display-4">Welcome to {{ title }}</h1>
+    <h1 class="display-6">Welcome to {{ title }}</h1>
   </div>
 </div>
