--- a/client/src/app/partials/footer/footer.component.html
+++ b/client/src/app/partials/footer/footer.component.html
@@ -1,3 +1,3 @@
-<nav class="navbar fixed-bottom navbar-light bg light">
+<nav class="navbar navbar-light bg light">
   <h6>&copy; Copyright {{ year }}. All Rights Reserved.</h6>
 </nav>
