--- a/client/src/app/contacts/contact-list/contact-list.component.html
+++ b/client/src/app/contacts/contact-list/contact-list.component.html
@@ -2,7 +2,7 @@
   <div class="row">
       <div class="col-md-offset-3 col-md-6">
           <h1>Contact List</h1>
-          <a class="btn btn-primary" routerLink="/contact-list/add" role="button">
+          <a class="btn btn-primary" routerLink="/contact/contact-list/add" role="button">
           <i class="fas fa-plus-circle"></i> Add a Contact</a>
           <br>
           <table class="table table-bordered table-striped table-hover">
