added Add component functionality

--- a/client/src/app/contacts/contact-list/contact-list.component.html
+++ b/client/src/app/contacts/contact-list/contact-list.component.html
@@ -22,12 +22,12 @@
                       <td class="text-center">{{ contact.age }}</td>
 
                       <td class="text-center">
-                      <a routerLink="edit/{{ contact._id }}"
+                      <a routerLink="/contact/contact-list/edit/{{ contact._id }}"
                           class="btn btn-primary"><i class="fas fa-pencil-alt"></i> Edit</a>
                       </td>
 
                       <td class="text-center">
-                              <a routerLink="delete/{{ contact._id }}"
+                              <a routerLink="/contact/contact-list/delete/{{ contact._id }}"
                                   class="btn btn-danger"><i class="fas fa-trash-alt"></i> Delete</a>
                               </td>
                   </tr>
