--- a/client/src/app/contacts/contact-details/contact-details.component.html
+++ b/client/src/app/contacts/contact-details/contact-details.component.html
@@ -17,30 +17,34 @@
 
                 <div class="form-group">
                     <label for="LastNameTextField">Last Name</label>
+
                     <input type="text" class="form-control"
                     id="LastNameTextField"
                     placeholder="Enter Last Name"
                     name="lastName"
                     [(ngModel)]="contact.lastName"
-                    value=" {{contact.lastName}} "
+                    value="{{ contact.lastName }}"
                     required>
                 </div>
 
                 <div class="form-group">
+
                     <label for="AgeTextField">Age</label>
+
                     <input type="text" class="form-control"
                     id="AgeTextField"
                     placeholder="Enter Age"
                     name="age"
                     [(ngModel)]="contact.age"
-                    value="{{contact.age}} "
+                    value="{{contact.age}}"
                     required>
+
                 </div>
 
                 <button type="submit" class="btn btn-primary">
-                <i class="fas fa-edit"></i>{{title}}</button>
+                <i class="fa fa-edit"></i>{{title}}</button>
                 <a href="/contact/contact-list" class="btn btn-warning">
-                    <i class="fas fa-undo"></i> Cancel</a>
+                    <i class="fa fa-undo"></i> Cancel</a>
             </form>
 
 
