--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -20,9 +20,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
 
-      <li class="nav-item active">
 
-      </li>
 
       <li class="nav-item">
 
@@ -33,9 +31,7 @@
       </li>
 
 
-      <li class="nav-item active">
 
-      </li>
 
       <li class="nav-item">
 
@@ -46,9 +42,7 @@
       </li>
 
 
-      <li class="nav-item active">
 
-      </li>
 
       <li class="nav-item">
 
@@ -59,9 +53,7 @@
       </li>
 
 
-      <li class="nav-item active">
 
-      </li>
 
       <li class="nav-item">
 
@@ -72,9 +64,7 @@
       </li>
 
 
-      <li class="nav-item active">
 
-      </li>
 
       <li class="nav-item">
 
@@ -82,14 +72,14 @@
           ><i class="fa fa-phone-square"></i>  Contact Me</a>
 
       </li>
-      <!--<% if(typeof displayName == 'string' && displayName) { %>
-        <li class="navbar-text"><i class="fas fa-lg fa-user"></i>
-          Welcome, <%= displayName %></li>-->
-        <li class="nav-item"><a routerLink="/logout" class="nav-link">
-          <i class="fas fa-lg fa-sign-out-alt"></i> Logout</a></li>
+      <li *ngIf="isLoggedIn()" class="navbar-text text-success ml-5 mr-5 d-none d-lg-inline"><i class="fas fa-lg fa-user"></i>
+        Welcome, {{ user.displayName }}</li>
 
-        <li class="nav-item"><a routerLink="/login" class="nav-link">
-          <i class="fas fa-lg fa-sign-in-alt"></i> Login</a></li>
+      <li *ngIf="isLoggedIn()" class="nav-item"><a (click)="onLogoutClick()" routerLink="/logout" class="nav-link">
+        <i class="fas fa-lg fa-sign-out-alt"></i> Logout</a></li>
+
+      <li *ngIf="!isLoggedIn()" class="nav-item"><a routerLink="/login" class="nav-link">
+        <i class="fas fa-lg fa-sign-in-alt"></i> Login</a></li>
 
     </ul>
   </div>
